2003-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/pread.c: Don't break up offset
	into high and low halves on n64.
	* sysdeps/unix/sysv/linux/mips/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pwrite64.c: Likewise.

2003-03-20  Ulrich Drepper  <drepper@redhat.com>

	* include/atomic.h (atomic_decrement_if_positive): Adjust for the
	correct atomic_compare_and_exchange_acq semantics.

2003-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/ieee754.h: Remove excess #endif.

2003-03-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/powerpc/bits/atomic.h (atomic_exchange): Remove unused
	variable.  Remove superfluous memory clobber.

	* include/atomic.h: Syntax braino fix.

	* posix/tst-nice.c (do_test): Use %m formats instead of printing errno
	in decimal.  Don't bail if niced at start.  Just check that nice call
	bumps the total at all.

2003-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/bits/setjmp.h: Store all N32 and N64 registers,
	including pc, gp, sp and fp, as long long.
	* sysdeps/mips/mips64/setjmp.S: Pass gp to __sigsetjmp_aux.
	* sysdeps/mips/mips64/setjmp_aux.c: Adjust type of arguments.
	Add gp argument, and set gp in the jmpbuf to it.
	* sysdeps/mips/setjmp_aux.c: Revert to o32-only.

2003-03-20  Ulrich Drepper  <drepper@redhat.com>

	* include/atomic.h: Define atomic_exchange and
	atomic_decrement_if_positive if not already defined.  Add some
	__builtin_expect.
	* sysdeps/i386/i486/bits/atomic.h: Define atomic_exchange.
	* sysdeps/x86_64/bits/atomic.h: Likewise.
	* sysdeps/ia64/bits/atomic.h: Pretty printing.  Define atomic_exchange.
	* sysdeps/powerpc/bits/atomic.h: Pretty printing.  Define
	atomic_exchange, atomic_exchange_and_add, and
	atomic_decrement_if_positive

2003-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/mips64/n64/ioctl.S: Sign-extend
	with a single instruction.
